<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/history"
        android:id="@+id/textView2"
        android:textColor="#0D47A1"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10sp"
        android:paddingLeft="30sp"
        android:paddingRight="30sp"
        android:background="#0D47A1"
        android:id="@+id/relativeLayout3">

        <ImageView
            android:layout_width="40sp"
            android:layout_height="wrap_content"
            android:id="@+id/type"
            android:src="@drawable/type_icon"
            android:contentDescription="@string/type"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="40sp"
            android:layout_height="wrap_content"
            android:id="@+id/time"
            android:src="@drawable/time_icon"
            android:contentDescription="@string/time"
            android:layout_weight="1"/>

        <ImageView
        android:layout_width="40sp"
        android:layout_height="wrap_content"
        android:id="@+id/download"
        android:src="@drawable/download_icon"
        android:contentDescription="@string/download"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="40sp"
            android:layout_height="wrap_content"
            android:id="@+id/upload"
            android:src="@drawable/upload_icon"
            android:contentDescription="@string/upload"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="40sp"
            android:layout_height="fill_parent"
            android:id="@+id/ping"
            android:src="@drawable/ping_icon"
            android:contentDescription="@string/ping"
            android:layout_weight="1"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="65sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#E0F2F1"
        android:padding="5sp"
        android:id="@+id/relativeLayout5">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:id="@+id/relativeLayout"
            android:layout_above="@+id/relativeLayout2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">


            <ImageView
                android:layout_width="50sp"
                android:layout_height="wrap_content"
                android:id="@+id/test"
                android:contentDescription="@string/test"
                android:src="@drawable/speed_icon"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:onClick="startTest"
                android:layout_marginLeft="40sp" />

            <ImageView
                android:layout_width="50sp"
                android:layout_height="wrap_content"
                android:id="@+id/history"
                android:contentDescription="@string/history"
                android:onClick="viewHistory"
                android:src="@drawable/history_icon"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"/>

            <ImageView
                android:layout_width="50sp"
                android:layout_height="wrap_content"
                android:id="@+id/star"
                android:contentDescription="@string/star"
                android:src="@drawable/star_icon"
                android:onClick="viewTop5"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="40sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="15sp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/relativeLayout2">

            <TextView
                android:layout_width="50sp"
                android:layout_height="wrap_content"
                android:text="@string/test"
                android:id="@+id/test_label"
                android:textColor="#000000"
                android:layout_marginLeft="40sp"
                android:layout_marginStart="40sp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:onClick="startTest"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="50sp"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:onClick="viewHistory"
                android:id="@+id/history_label"
                android:textColor="#000000"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                />

            <TextView
                android:layout_width="50sp"
                android:layout_height="wrap_content"
                android:text="@string/star"
                android:id="@+id/star_label"
                android:textColor="#000000"
                android:onClick="viewTop5"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="40sp"
                android:layout_marginEnd="40sp"
                android:textAlignment="center"/>

        </RelativeLayout>

    </RelativeLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relativeLayout3"
        android:layout_above="@+id/relativeLayout5"
        android:id="@+id/list_view"></ListView>


</RelativeLayout>